# Luminescence

./: .gitignore  BUILD.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-and-test-windows.yml
gradle/wrapper/: gradle-wrapper.properties
src/main/java/me/ayydxn/luminescence/: Ultralight.java
src/main/java/me/ayydxn/luminescence/bitmap/: BitmapFormat.java  ULBitmap.java
src/main/java/me/ayydxn/luminescence/config/: Config.java  EffectQuality.java  FaceWinding.java  FontHinting.java  ULConfig.java
src/main/java/me/ayydxn/luminescence/console/: MessageLevel.java  MessageSource.java  MessageType.java  ULMessageLevel.java  ULMessageSource.java
src/main/java/me/ayydxn/luminescence/core/: UltralightNativeLoader.java
src/main/java/me/ayydxn/luminescence/events/: GamepadEventType.java  KeyEventType.java  MouseButton.java  MouseEventType.java  ScrollEventType.java  ULGamepadEvent.java  ULKeyEvent.java  ULMouseEvent.java  ULScrollEvent.java
src/main/java/me/ayydxn/luminescence/font/: ULFontFile.java
src/main/java/me/ayydxn/luminescence/geometry/: IntRect.java  Rect.java  ULIntRect.java  ULRect.java
src/main/java/me/ayydxn/luminescence/gpu/: ULCommand.java  ULGPUState.java  ULIndexBuffer.java  ULRenderBuffer.java  ULRenderTarget.java  ULShaderType.java  ULVertexBuffer.java
src/main/java/me/ayydxn/luminescence/internal/: UltralightNativeLoader.java
src/main/java/me/ayydxn/luminescence/javascript/: JSArray.java  JSContext.java  JSException.java  JSFunction.java  JSObject.java  JSType.java  JSValue.java
src/main/java/me/ayydxn/luminescence/platform/: ULClipboard.java  ULFileSystem.java  ULFontLoader.java  ULGPUDriver.java  ULLogger.java  ULPlatform.java
src/main/java/me/ayydxn/luminescence/platform/impl/: StandardULFileSystem.java  StandardULFontLoader.java
src/main/java/me/ayydxn/luminescence/renderer/: ULRenderer.java  ULSession.java
src/main/java/me/ayydxn/luminescence/surface/: ULBitmapSurface.java  ULSurface.java
src/main/java/me/ayydxn/luminescence/util/: NativeEnum.java  ULBuffer.java  ULImageSource.java  ULString.java  UsedByNative.java
src/main/java/me/ayydxn/luminescence/view/: RenderTarget.java  ULCursor.java  ULRenderTarget.java  ULView.java  ULViewConfig.java  ULViewListener.java
src/main/native/: CMakeLists.txt  JNIBridge.cpp  ULBitmap.cpp  ULBuffer.cpp  ULConfig.cpp  ULGamepadEvent.cpp  ULImageSource.cpp  ULInputEvents.cpp  ULPlatform.cpp  ULRenderer.cpp  ULSession.cpp  ULString.cpp  ULSurface.cpp  ULView.cpp  ULViewConfig.cpp  Ultralight.cpp
src/main/native/Adapters/: ClipboardCallbackAdapter.cpp  ClipboardCallbackAdapter.h  FileSystemCallbackAdapter.cpp  FileSystemCallbackAdapter.h  FontLoaderCallbackAdapter.cpp  FontLoaderCallbackAdapter.h  GPUDriverCallbackAdapter.cpp  GPUDriverCallbackAdapter.h  JSFunctionCallbackAdapter.cpp  JSFunctionCallbackAdapter.h  LoggerCallbackAdapter.cpp  LoggerCallbackAdapter.h  ViewCallbackAdapter.cpp  ViewCallbackAdapter.h
src/main/native/Cache/: BitmapCache.h  BitmapFormatCache.h  IntRectCache.h  JSCCache.h  RectCache.h  RenderTargetCache.h  ViewCache.h
src/main/native/Core/: CacheDefinitions.h  CallbackAdapter.cpp  CallbackAdapter.h  CallbackAdapterRegistry.h  JNIUtilities.h  Profiling.h  ScopedLocalRef.h
src/main/native/JavaScript/: JSArray.cpp  JSCUtilities.cpp  JSCUtilities.h  JSContext.cpp  JSFunction.cpp  JSObject.cpp  JSValue.cpp
src/main/native/include/: JNIUtilities.h
src/test/java/me/ayydxn/luminescence/: BaseLuminescenceTest.java  DemoApp.java  UltralightCoreTest.java
src/test/java/me/ayydxn/luminescence/bitmap/: ULBitmapTest.java
src/test/java/me/ayydxn/luminescence/config/: ConfigTest.java  ULConfigTest.java
src/test/java/me/ayydxn/luminescence/demo/: DemoApp.java  LWJGLCPUDemoApp.java  LWJGLDemo.java  LWJGLDemoApp.java  LWJGLGPUDemoApp.java
src/test/java/me/ayydxn/luminescence/event/: ULInputEventsTest.java
src/test/java/me/ayydxn/luminescence/javascript/: JSArrayTest.java  JSContextTest.java  JSFunctionTest.java  JSInteropIntegrationTest.java  JSObjectTest.java  JSValueTest.java
src/test/java/me/ayydxn/luminescence/platform/: ULGPUDriverTest.java  ULPlatformTest.java
src/test/java/me/ayydxn/luminescence/renderer/: ULRendererTest.java  ULSessionTest.java
src/test/java/me/ayydxn/luminescence/util/: ULBufferTest.java  ULImageSourceTest.java  ULStringTest.java
src/test/java/me/ayydxn/luminescence/view/: ULViewConfigTest.java  ULViewTest.java
src/test/resources/ultralight/html/: advanced_demo.html  demo.html
src/test/resources/ultralight/shaders/: UltralightFillVertex.glsl  UltralightPathVertex.glsl  UltralightQuadVertex.glsl
